Finalize for 'release'

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,22 +1,23 @@
+# JDA
+jda.discord.token=${GREG_TOKEN}
+
 # Guild
 guild.id = 811765202143805481
 
 # Mission Manager
 mission.setup.required = false
-mission.publish.category = 813998962369232926
-mission.manager.message = 813998961144758283
-mission.creator.role = 813998958643773462
+mission.publish.category = 816072971897667644
+mission.manager.message = 816072970966794290
+mission.creator.role = 816072965900861530
 
 # Alerts
 alert.warning.minutes = 30
 
-# JDA
-jda.discord.token=NzgzNTM4MTA5OTEyNDQ5MTA1.X8cMug.RW1UubnjUHOiN7kL4mlZsHEnFYg
-
 # MongoDB
-spring.data.mongodb.database=greg-bot-dev
-spring.data.mongodb.host=localhost
+spring.data.mongodb.uri=${GREG_DB_URI}
+spring.data.mongodb.database=${GREG_DB_NAME}
 
-# Rest
-server.port = 8081
+# Spring
+spring.main.banner-mode=off
+spring.output.ansi.enabled=ALWAYS
 
