--- a/pom.xml
+++ b/pom.xml
@@ -10,11 +10,12 @@
 	</parent>
 	<groupId>zone.greggle</groupId>
 	<artifactId>greg-bot</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.1.1-ALPHA</version>
 	<name>greg-bot</name>
 	<description>Gregglezone Discord Bot</description>
 	<properties>
-		<java.version>11</java.version>
+		<source>1.8</source>
+		<target>1.8</target>
 	</properties>
 	<dependencies>
 <!--		Spring -->
