Update manager message on bot start

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,10 +5,11 @@ jda.discord.token=${GREG_TOKEN}
 guild.id = 811765202143805481
 
 # Mission Manager
-mission.setup.required = false
-mission.publish.category = 816072971897667644
-mission.manager.message = 816072970966794290
-mission.creator.role = 816072965900861530
+mission.setup.required = true
+mission.publish.category = 817191798136504330
+mission.manager.message = 817191798929227799
+mission.creator.role = 817191795372720188
+mission.manager.channel = 817191797184528394
 
 # Alerts
 alert.warning.minutes = 30
