--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>zone.greggle</groupId>
 	<artifactId>greg-bot</artifactId>
-	<version>0.1.2-ALPHA</version>
+	<version>0.1.2-SNAPSHOT</version>
 	<name>greg-bot</name>
 	<description>Gregglezone Discord Bot</description>
 	<properties>
@@ -79,6 +79,14 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>build-info</id>
+						<goals>
+							<goal>build-info</goal>
+						</goals>
+					</execution>
+				</executions>
 			</plugin>
 
 		</plugins>
