--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>zone.greggle</groupId>
 	<artifactId>greg-bot</artifactId>
-	<version>0.1.2-SNAPSHOT</version>
+	<version>1.0.1</version>
 	<name>greg-bot</name>
 	<description>Gregglezone Discord Bot</description>
 	<properties>
