Fixed editing breaking after publishing, and improved logs

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,3 +22,6 @@ spring.data.mongodb.database=${GREG_DB_NAME}
 spring.main.banner-mode=off
 spring.output.ansi.enabled=ALWAYS
 
+# Logging
+logging.level.zone.greggle=DEBUG
+
