Added configurable bot name

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,10 @@ jda.discord.token=${GREG_TOKEN}
 # Guild
 guild.id = 811765202143805481
 
+# Bot
+greg.config.name = TEST Bot
+greg.config.credit-footer = ${greg.config.name} by Scythern#5601
+
 # Mission Manager
 mission.setup.required = true
 mission.publish.category = 817191798136504330
