--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>zone.greggle</groupId>
 	<artifactId>greg-bot</artifactId>
-	<version>1.1.3</version>
+	<version>1.1.4</version>
 	<name>greg-bot</name>
 	<description>Gregglezone Discord Bot</description>
 	<properties>
@@ -75,6 +75,7 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<version>${project.parent.version}</version>
 				<executions>
 					<execution>
 						<id>build-info</id>
