Add configurable delete time and fix activity

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,8 +15,9 @@ mission.manager.message = 953416879161110528
 mission.creator.role = 953416875285549078
 mission.manager.channel = 953416877340758026
 
-# Alerts
+# Scheduling
 alert.warning.minutes = 30
+delete.time.hours = 3
 
 # MongoDB
 spring.data.mongodb.uri=${GREG_DB_URI}
